--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -17,6 +17,29 @@
 </head>
 <body>
 
+<div id="toastData"
+     th:if="${toastType != null and toastMessage != null}"
+     th:data-type="${toastType}"
+     th:data-message="${toastMessage}"
+     style="display: none;">
+</div>
+
+
+<div id="toastContainer" class="toast-container"></div>
+
+
+<template id="toastTemplate">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">
+                <span class="toast-icon" style="font-size: 18px; margin-right: 8px;"></span>
+                <span class="toast-title"></span>
+            </strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body"></div>
+    </div>
+</template>
 
 <div id="navbar">
     <ul>
@@ -30,7 +53,7 @@
 
 <div class="container" id="container">
     <div class="form-container sign-up">
-        <form>
+        <form id="sign-up-form">
             <h1>Create Account</h1>
             <div class="social-icons">
                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -39,14 +62,21 @@
                 <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <span>or use your email for registeration</span>
-            <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <button>Sign Up</button>
+            <div class="row">
+                <div class="col-md-6">
+                    <input type="text" id="firstName" name="firstName" placeholder="First Name">
+                </div>
+                <div class="col-md-6">
+                    <input type="text" id="lastName" name="lastName" placeholder="Last Name">
+                </div>
+            </div>
+            <input type="email" id="email" name="email" placeholder="Email">
+            <input type="password" id="password" name="password" placeholder="Password">
+            <button type="submit" id="signUpBtn">Sign Up </button>
         </form>
     </div>
     <div class="form-container sign-in">
-        <form>
+        <form id="sign-in-form">
             <h1>Sign In</h1>
             <div class="social-icons">
                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -58,7 +88,7 @@
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">
             <a href="#">Forget Your Password?</a>
-            <button>Sign In</button>
+            <button type="submit" id="signInBtn">Sign In</button>
         </form>
     </div>
     <div class="toggle-container">
@@ -77,6 +107,7 @@
     </div>
 </div>
 
-<script src="/js/login_page.js?v=1"></script>
+<script src="/js/toast.js"></script>
+<script src="/js/userApi.js?v=1"></script>
 </body>
 </html>
