--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding-left: 10px;
     padding-right: 10px;
-    overflow: hidden;
+    overflow: visible;
     width: 100%;
     font-size: 1rem;
 }
@@ -72,4 +72,34 @@
 #favorites:hover {
     cursor: pointer;
     opacity: 0.7;
+}
+
+/*logged in profile icon*/
+.profile-circle {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    background-color: gray;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+#loggedOutProfile {
+    width: 42px;
+    height: 42px;
+}
+
+.navbarRight.dropdown {
+    position: relative;
+}
+.dropdown-menu {
+    min-width: 150px;
+    z-index: 1200;
+    position: absolute;
+    top: 100%;
+    right: 0;
 }
