--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -3,8 +3,8 @@
     border-bottom: 1px solid lightgray;
     position: sticky;
     top: 0;
-    overflow: hidden;
-    z-index: 100;
+    z-index: 5000;
+    height: 75px;
 }
 
 #navbar ul {
@@ -102,4 +102,10 @@
     position: absolute;
     top: 100%;
     right: 0;
+}
+
+#navbar::after {
+    content: "";
+    display: table;
+    clear: both;
 }
