--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -45,10 +45,11 @@
 
 .links {
     color: black;
-    padding: 100% 15px;
+    padding: 0 15px;
     text-decoration: none;
-    text-align: center;
-    vertical-align: center;
+    display: flex;
+    align-items: center;
+    height: 75px;
 }
 
 .links:hover {
