--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -53,7 +53,7 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <li><span class="dropdown-item-text" id="userNameDisplay"></span></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><button class="dropdown-item" id="logout" onclick="logout()">Logout</button></li>
+                <li><button class="dropdown-item" id="logout" onclick="logout()">Sign out</button></li>
             </ul>
         </li>
         <li class="navbarRight"><a><img id="cart" src="/images/icons/shoppingCart.png" alt="cart"></a></li>
