Validation Frontend for register and sign-in User done

--- a/src/main/resources/static/css/login_page.css
+++ b/src/main/resources/static/css/login_page.css
@@ -208,3 +208,14 @@ body{
 .container.active .toggle-right{
     transform: translateX(200%);
 }
+
+/* Fehlermeldung kleiner & weniger Abstand */
+.invalid-feedback {
+    font-size: 0.75rem;
+    margin-top: 2px;
+}
+
+/* Abstand nach unten bei Inputs verringern */
+form .form-control {
+    margin-bottom: 4px;
+}
