--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -63,7 +63,7 @@
 
 <div class="container" id="container">
     <div class="form-container sign-up">
-        <form id="sign-up-form">
+        <form id="sign-up-form" novalidate>
             <h1>Create Account</h1>
             <div class="social-icons">
                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -74,19 +74,31 @@
             <span>or use your email for registeration</span>
             <div class="row">
                 <div class="col-md-6">
-                    <input type="text" id="firstName" name="firstName" placeholder="First Name">
+                    <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
+                    <div class="invalid-feedback">
+                        No valid Firstname.
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <input type="text" id="lastName" name="lastName" placeholder="Last Name">
+                    <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
+                    <div class="invalid-feedback">
+                        No valid Lastname.
+                    </div>
                 </div>
             </div>
-            <input type="email" id="email" name="email" placeholder="Email">
-            <input type="password" id="password" name="password" placeholder="Password">
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <div class="invalid-feedback">
+                Please enter a valid email.
+            </div>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <div class="invalid-feedback">
+                Password must be at least 6 characters long
+            </div>
             <button type="submit" id="signUpBtn">Sign Up </button>
         </form>
     </div>
     <div class="form-container sign-in">
-        <form id="sign-in-form">
+        <form id="sign-in-form" novalidate>
             <h1>Sign In</h1>
             <div class="social-icons">
                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -96,7 +108,13 @@
             </div>
             <span>or use your email password</span>
             <input type="email" id="login-email" name="login-email" placeholder="Email" required>
+            <div class="invalid-feedback">
+                Please enter a valid login email.
+            </div>
             <input type="password" id="login-password" name="login-password" placeholder="Password" required>
+            <div class="invalid-feedback">
+                Please enter a valid login password.
+            </div>
             <a href="#">Forget Your Password?</a>
             <button type="submit" id="signInBtn">Sign In</button>
         </form>
