--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -90,7 +90,7 @@
             <div class="invalid-feedback">
                 Please enter a valid email.
             </div>
-            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="password" id="password" name="password" placeholder="Password" minlength="6" required>
             <div class="invalid-feedback">
                 Password must be at least 6 characters long
             </div>
