--- a/src/main/resources/templates/Bookings.html
+++ b/src/main/resources/templates/Bookings.html
@@ -21,6 +21,7 @@
         <li class="navbarLeft"><a href="/homepage"><img class="logo" src="/images/icons/EVERout_Logo_dunkel_v3.png" alt="Home button"></a></li>
         <li class="navbarLeft"><a class="links" href="/events">EVENTS</a></li>
         <li class="navbarLeft"><a class="links" href="/bookings">BOOKINGS</a></li>
+        <li class="navbarLeft" id="adminNav" style="display: none;"><a class="links" href="/admin">ADMIN</a></li>
         <li class="navbarRight" id= "loggedOutContainer"><a href="/user"><img id="loggedOutProfile" src="/images/icons/Profile.png" alt="profile-account"></a></li>
         <li class="navbarRight dropdown" id="loggedInContainer" style="display: none;">
             <a class="d-flex align-items-center text-decoration-none dropdown-toggle" href="#" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -29,7 +30,7 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <li><span class="dropdown-item-text" id="userNameDisplay"></span></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><button class="dropdown-item" id="logout" onclick="logout()">Sing out</button></li>
+                <li><button class="dropdown-item" id="logout" onclick="logout()">Sign out</button></li>
             </ul>
         </li>
         <li class="navbarRight"><a><img id="cart" src="/images/icons/shoppingCart.png" alt="cart"></a></li>
