--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -53,6 +53,7 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <li><span class="dropdown-item-text" id="userNameDisplay"></span></li>
                 <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/profile">Profile</a></li>
                 <li><button class="dropdown-item" id="logout" onclick="logout()">Sign out</button></li>
             </ul>
         </li>
