--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -162,6 +162,15 @@
                                 </div>
                             </div>
 
+                            <!-- Deposit Percent -->
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label>Deposit (%) <small class="text-muted">(default: 30%)</small></label>
+                                    <input type="number" id="depositPercent" class="form-control" min="0" max="100" step="1">
+                                </div>
+                            </div>
+
+
                             <!-- Location -->
                             <h5 class="mt-4">Location</h5>
                             <div class="row">
@@ -219,12 +228,16 @@
                             <h5 class="mt-4">Appointments</h5>
                             <div id="appointmentsContainer"></div>
                             <!-- appointment input row ... -->
-                            <div class="row align-items-end mb-3">
-                                <div class="col-md-5">
+                            <button type="button" class="btn btn-outline-primary add-appointment-btn mb-2" onclick="showAppointmentInputs()">
+                                + Add Appointment
+                            </button>
+
+                            <div id="appointmentInputs" class="row mb-3" style="display:none;">
+                                <div class="col-md-4">
                                     <label>Start</label>
                                     <input type="date" id="apptStart" class="form-control">
                                 </div>
-                                <div class="col-md-5">
+                                <div class="col-md-4">
                                     <label>End</label>
                                     <input type="date" id="apptEnd" class="form-control">
                                 </div>
@@ -232,10 +245,14 @@
                                     <label>Seasonal</label><br>
                                     <input type="checkbox" id="apptSeasonal" class="form-check-input mt-2">
                                 </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <button type="button" class="btn btn-outline-primary" onclick="addAppointment()">Add Appointment</button>
+                                <div id="appoitmentBtns" class="row">
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn save" onclick="saveAppointment()">✓</button>
+                                    </div>
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn cancel" onclick="cancelAppointment()">✕</button>
+                                    </div>
+                                </div>
                             </div>
 
 
@@ -243,26 +260,27 @@
                             <h5 class="mt-4">Additional Packages</h5>
                             <div id="packagesContainer"></div>
                             <!-- package input row ... -->
-                            <div class="row mb-3">
-                                <div class="col-md-4">
-                                    <label>Title</label>
-                                    <input type="text" id="packageTitleInput" class="form-control">
-                                </div>
+                            <button type="button" class="btn btn-outline-primary add-package-btn mb-2" onclick="showPackageInputs()">
+                                + Add Package
+                            </button>
 
+                            <div id="packageInputs" class="row mb-3" style="display:none;">
                                 <div class="col-md-4">
-                                    <label>Description</label>
-                                    <input type="text" id="packageDescInput" class="form-control">
+                                    <input type="text" id="packageTitleInput" class="form-control mb-2" placeholder="Title">
                                 </div>
-
+                                <div class="col-md-4">
+                                    <input type="text" id="packageDescInput" class="form-control mb-2" placeholder="Description">
+                                </div>
                                 <div class="col-md-3">
-                                    <label>Price (€)</label>
-                                    <input type="number" id="packagePriceInput" class="form-control" step="0.01" min="0">
+                                    <input type="number" id="packagePriceInput" class="form-control mb-2" step="0.01" min="0" placeholder="Price">
                                 </div>
-
-                                <div class="col-md-1 d-flex align-items-end">
-                                    <button type="button" class="btn btn-outline-primary w-100" onclick="addPackage()">
-                                        Add
-                                    </button>
+                                <div id="packageBtns" class="row">
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn save" onclick="savePackage()">✓</button>
+                                    </div>
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn cancel" onclick="cancelPackage()">✕</button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -294,22 +312,53 @@
                             <h5 class="mt-4">Requirements</h5>
                             <div id="requirementsContainer"></div>
 
-                            <div class="input-group mb-3">
-                                <input id="requirementInput" class="form-control" placeholder="Add requirement">
-                                <button type="button" class="btn btn-outline-primary" onclick="addRequirement()">Add</button>
+                            <button type="button" class="btn btn-outline-primary add-requirement-btn mb-2" onclick="showRequirementInputs()">
+                                + Add Requirement
+                            </button>
+
+                            <div id="requirementInputs" class="row mb-3" style="display:none;">
+                                <div class="col-12">
+                                    <input id="requirementInput" class="form-control mb-2" placeholder="Requirement">
+                                </div>
+                                <div id="requirementBtns" class="row">
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn save" onclick="saveRequirement()">✓</button>
+                                    </div>
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn cancel" onclick="cancelRequirement()">✕</button>
+                                    </div>
+                                </div>
+
                             </div>
 
                             <!-- Equipment -->
                             <h5 class="mt-4">Equipment</h5>
                             <div id="equipmentContainer"></div>
 
-                            <div class="input-group mb-3">
-                                <input id="equipmentNameInput" class="form-control" placeholder="Name">
-                                <select id="equipmentRentableInput" class="form-select">
-                                    <option value="true">Rentable</option>
-                                    <option value="false">Not Rentable</option>
-                                </select>
-                                <button type="button" class="btn btn-outline-primary" onclick="addEquipment()">Add</button>
+                            <button type="button" class="btn btn-outline-primary add-equipment-btn mb-2" onclick="showEquipmentInputs()">
+                                + Add Equipment
+                            </button>
+
+                            <div id="equipmentInputs" class="row mb-3" style="display:none;">
+                                <div class="col-md-6">
+                                    <input id="equipmentNameInput" class="form-control mb-2" placeholder="Name">
+                                </div>
+                                <div class="col-md-5">
+                                    <select id="equipmentRentableInput" class="form-select mb-2">
+                                        <option value="">Select</option>
+                                        <option value="true">Rentable</option>
+                                        <option value="false">Not Rentable</option>
+                                    </select>
+                                </div>
+                                <div id="equipmentBtns" class="row">
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn save" onclick="saveEquipment()">✓</button>
+                                    </div>
+                                    <div class="col-auto">
+                                        <button type="button" class="icon-btn cancel" onclick="cancelEquipment()">✕</button>
+                                    </div>
+                                </div>
+
                             </div>
 
                             <!-- Images -->
@@ -323,10 +372,6 @@
                             <select id="organizerSelect" class="form-select mb-3">
                                 <option value="">Select Organizer</option>
                             </select>
-
-                            <button type="button" class="btn btn-outline-primary mb-3" onclick="toggleNewOrganizer()">
-                                + Add New Organizer
-                            </button>
 
                             <div id="newOrganizerFields" style="display:none;">
                                 <div class="mb-3">
