--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -369,7 +369,7 @@
                             <!-- Organizer -->
                             <h5 class="mt-4">Organizer</h5>
 
-                            <select id="organizerSelect" class="form-select mb-3">
+                            <select id="organizerSelect" class="form-select mb-3" required>
                                 <option value="">Select Organizer</option>
                             </select>
 
