Edit Event Pop up style changed for better visablity with navbar

--- a/src/main/resources/static/css/editEvent.css
+++ b/src/main/resources/static/css/editEvent.css
@@ -17,6 +17,8 @@
     border-radius: 12px;
     background-color: #ffffff;
     padding: 10px 0;
+    margin-top: 420px;
+    max-height: 90%;
 }
 
 /* ===========================
