--- a/src/main/resources/static/css/editEvent.css
+++ b/src/main/resources/static/css/editEvent.css
@@ -17,7 +17,7 @@
     border-radius: 12px;
     background-color: #ffffff;
     padding: 10px 0;
-    margin-top: 420px;
+    margin-top: 37rem;
     max-height: 90%;
 }
 
